--- a/seahub/templates/js/templates.html
+++ b/seahub/templates/js/templates.html
@@ -1172,6 +1172,7 @@
             <span class="loading-icon loading-tip"></span>
             <% if (!repo_encrypted && can_generate_share_link) { %>
             <div id="download-link-share" class="tabs-panel">
+                <span class="share-link-count-exceeds-limit hide">{% trans "The number of links has exceeded the limit."%}</span>
                 <form id="generate-download-link-form" action="" class="hide">
 
                     <label class="checkbox-label">
@@ -1290,6 +1291,7 @@
             <% if (is_dir) { %>
                 <% if (user_perm == 'rw' && !repo_encrypted && can_generate_upload_link) { %>
             <div id="dir-upload-link-share" class="tabs-panel hide">
+                <span class="share-link-count-exceeds-limit hide">{% trans "The number of links has exceeded the limit."%}</span>
                 <p class="tip hide">{% trans "You can share the generated link to others and then they can upload files to this directory via the link." %}</p>
                 <form id="generate-upload-link-form" action="" class="hide">
                     <label class="checkbox-label">
