--- a/seahub/templates/libraries.html
+++ b/seahub/templates/libraries.html
@@ -277,6 +277,7 @@ app["pageOptions"] = {
     can_generate_upload_link: {% if user.permissions.can_generate_upload_link %} true {% else %} false {% endif %},
     is_staff: {% if request.user.is_staff %} true {% else %} false {% endif %},
     repo_password_min_length: {{ repo_password_min_length }},
+    share_link_count_limit: {{ user.permissions.share_link_count_limit }},
     share_link_password_min_length: {{ share_link_password_min_length }},
     share_link_expire_days_min: {{ share_link_expire_days_min }},
     share_link_expire_days_max: {{ share_link_expire_days_max }},
