--- a/seahub/templates/js/templates.html
+++ b/seahub/templates/js/templates.html
@@ -488,7 +488,7 @@
     </div>
     <% } %>
 
-    <% if (!encrypted && (app.pageOptions.can_generate_share_link || app.pageOptions.can_generate_upload_link || is_repo_owner || is_admin)) { %>
+    <% if (is_address_book_group_admin && !encrypted && (app.pageOptions.can_generate_share_link || app.pageOptions.can_generate_upload_link || is_repo_owner || is_admin)) { %>
     <button class="btn-white hidden-sm-down" id="share-cur-dir">{% trans "Share" %}</button>
     <span class="sf2-icon-share hidden-md-up mobile-icon" id="share-cur-dir" aria-label="{% trans "Share" %}"></span>
     <% } %>
@@ -739,8 +739,10 @@
         <div class="op-container">
             <div class="displayed-op">
                 <a class="op-icon download sf2-icon-download sf2-x vh" href="<%= download_url %>" title="{% trans "Download" %}" aria-label="{% trans "Download" %}"></a>
-                <% if (!repo_encrypted && can_generate_share_link) { %>
+                <% if (app.pageOptions.can_share_repo || app.pageOptions.can_generate_share_link || app.pageOptions.can_generate_upload_link) { %>
+                <% if (!repo_encrypted && (is_repo_owner || is_admin)) { %>
                 <a href="#" class="op-icon share sf2-icon-share sf2-x vh" title="{% trans "Share" %}" aria-label="{% trans "Share" %}"></a>
+                <% } %>
                 <% } %>
                 <% if (dirent.perm == 'rw') { %>
                 <% if (!dirent.is_locked || (dirent.is_locked && dirent.locked_by_me)) { %>
