--- a/seahub/templates/libraries.html
+++ b/seahub/templates/libraries.html
@@ -275,6 +275,7 @@ app["pageOptions"] = {
     can_add_repo: {% if user.permissions.can_add_repo %} true {% else %} false {% endif %},
     can_generate_share_link: {% if user.permissions.can_generate_share_link %} true {% else %} false {% endif %},
     can_generate_upload_link: {% if user.permissions.can_generate_upload_link %} true {% else %} false {% endif %},
+    can_share_repo: {% if user.permissions.can_share_repo %} true {% else %} false {% endif %},
     is_staff: {% if request.user.is_staff %} true {% else %} false {% endif %},
     repo_password_min_length: {{ repo_password_min_length }},
     share_link_count_limit: {{ user.permissions.share_link_count_limit }},
