[amefile] custom logo/favicon/page

--- a/seahub/templates/sysadmin/settings.html
+++ b/seahub/templates/sysadmin/settings.html
@@ -33,7 +33,7 @@
         {% include "snippets/web_settings_form.html" %}
     {% endwith %}
 
-    {% with type="file" setting_display_name="Logo" setting_name="logo" file_path=logo_path file_width=256 file_height=64 help_tip="logo.png, 256px * 64px" %}
+    {% with type="file" setting_display_name="Logo" setting_name="logo" file_path=logo_path file_width=logo_width file_height=logo_height help_tip="logo.png, 256px * 64px" %}
         {% include "snippets/web_settings_form.html" %}
     {% endwith %}
 
